Adjust perfect solve popup font size on mobile

--- a/src/app/components/game/game.module.css
+++ b/src/app/components/game/game.module.css
@@ -97,5 +97,6 @@ because it was interfering with the positioning of the input element */
 
     .perfectPopup {
       text-shadow: 1px 1px 2px #000;
+      font-size: 1.75rem;
     }
 }
